--- a/HTML Only/home.html
+++ b/HTML Only/home.html
@@ -97,6 +97,10 @@
       </div>
     </div>
 
+    <div class="location">
+      <h5 class="loctext">Our location</h5>
+    </div>
+
     <footer class="footer-distributed">
       <div class="footer-left">
         <h3>ECE<span>Department</span></h3>
