--- a/index.html
+++ b/index.html
@@ -101,6 +101,19 @@
       </div>
     </div>
 
+    <div class="location">
+      <h5>OUR LOCATION</h5>
+      <h6>San Marcelino St, Ayala Blvd, Ermita, Manila, 1000</h6>
+      <div class="location">
+        <h5>OUR LOCATION</h5>
+        <h6>San Marcelino St, Ayala Blvd, Ermita, Manila, 1000</h6>
+        <p>
+          Telephone: (+63) 253 013 001 || E-mail: itso@tup.edu.ph /
+          tup@tup.edu.ph.
+        </p>
+      </div>
+    </div>
+
     <!-- footer codes -->
     <footer class="footer-distributed">
       <div class="footer-left">
