--- a/src/apply.html
+++ b/src/apply.html
@@ -34,7 +34,9 @@
         <p>Please fill in this form to apply for the ECE department.</p>
         <hr />
 
-        <label for="name"><b>Name</b></label>
+        <label for="name"><b>First Name</b></label>
+        <input type="text" placeholder="Enter Name" name="name" required />
+        <label for="name"><b>Last Name</b></label>
         <input type="text" placeholder="Enter Name" name="name" required />
 
         <label for="email"><b>Email</b></label>
@@ -60,8 +62,8 @@
         <label for="zip"><b>Zip</b></label>
         <input type="text" placeholder="Enter Zip" name="zip" required />
 
-        <label for="gpa"><b>School</b></label>
-        <input type="text" placeholder="Enter GPA" name="gpa" required />
+        <label for="gpa"><b>Senior High School</b></label>
+        <input type="text" placeholder="Enter School" name="gpa" required />
 
         <label for="sat"><b>Enter Highschool GPA</b></label>
         <input type="text" placeholder="Enter GPA" name="sat" required />
