--- a/src/home.html
+++ b/src/home.html
@@ -98,6 +98,15 @@
       </div>
     </div>
 
+    <div class="location">
+      <h5>OUR LOCATION</h5>
+      <h6>San Marcelino St, Ayala Blvd, Ermita, Manila, 1000</h6>
+      <p>
+        Telephone: (+63) 253 013 001 || E-mail: itso@tup.edu.ph /
+        tup@tup.edu.ph.
+      </p>
+    </div>
+
     <footer class="footer-distributed">
       <div class="footer-left">
         <h3>ECE<span>Department</span></h3>
