v3-html-only-changes

--- a/HTML Only/home.html
+++ b/HTML Only/home.html
@@ -39,6 +39,7 @@
         they work closely with students to help them achieve their academic and
         professional goals.
       </p>
+      <img src="/assets/COEBanner1.jpg" alt="coeLogo" />
       <button class="nws"><a href="apply.html">Apply</a></button>
       <button class="orgs" type="button">
         <!-- when pressed, it will go to the about us page -->
@@ -87,6 +88,7 @@
 
     <div class="lastsec">
       <div class="org">
+        <img src="/assets/bg3.jpg" alt="coeLogo" />
         <h2>Be One With <span class="ece">ECE</span></h2>
         <p class="desc">
           With TUP's Free Education, you can experience top-tier Education with
@@ -98,6 +100,7 @@
     </div>
 
     <div class="location">
+      <img src="/assets/map.jpg" alt="map" />
       <h5>OUR LOCATION</h5>
       <h6>San Marcelino St, Ayala Blvd, Ermita, Manila, 1000</h6>
       <p>
