--- a/HTML Only/about.html
+++ b/HTML Only/about.html
@@ -30,6 +30,7 @@
 
     <div class="abouthead">
       <h1>ABOUT ECE DEPARTMENT</h1>
+      <img src="/assets/p2.jpg" alt="abouthead" />
       <p class="head-p">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aperiam
         vero exercitationem dolorem. Odio aut quisquam ipsum nesciunt temporibus
