--- a/HTML Only/apply.html
+++ b/HTML Only/apply.html
@@ -29,6 +29,7 @@
     <div class="bg"></div>
     <form>
       <div class="form">
+        <img src="/assets/bgapp2.jpg" alt="background" />
         <h1>INTERESTED?</h1>
         <p>Please fill in this form to apply for the ECE department.</p>
         <hr />
