--- a/HTML Only/home.html
+++ b/HTML Only/home.html
@@ -50,7 +50,7 @@
     <h1 class="nw1">ECE CORNER</h1>
     <div class="midsec">
       <div class="box-1">
-        <img src="/assets/coeLogo.jpg" alt="coeLogo" />
+        <img src="/assets/coeLogo.jpg" alt="coeLogo" width="75" />
         <h3>OECES GA: 2023</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
@@ -62,7 +62,7 @@
       </div>
 
       <div class="box-1">
-        <img src="/assets/coeLogo.jpg" alt="coeLogo" />
+        <img src="/assets/coeLogo.jpg" alt="coeLogo" width="75" />
         <h3>ECE BOARDS: OCT 2023</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
@@ -74,7 +74,7 @@
       </div>
 
       <div class="box-1">
-        <img src="/assets/coeLogo.jpg" alt="coeLogo" />
+        <img src="/assets/coeLogo.jpg" alt="coeLogo" width="75" />
         <h3>APPRECIATE 2023</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
