--- a/HTML Only/about.html
+++ b/HTML Only/about.html
@@ -30,7 +30,7 @@
 
     <div class="abouthead">
       <h1>ABOUT ECE DEPARTMENT</h1>
-      <img src="/assets/p2.jpg" alt="abouthead" />
+      <img src="/assets/p2.jpg" alt="abouthead" width="1920" height="720" />
       <p class="head-p">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aperiam
         vero exercitationem dolorem. Odio aut quisquam ipsum nesciunt temporibus
@@ -45,7 +45,7 @@
 
         <div class="box-container">
           <div class="box2">
-            <img src="/assets/calc.png" alt="" />
+            <img src="/assets/calc.png" alt="" width="75" />
             <h3>Calculus 1&2</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
@@ -55,7 +55,7 @@
           </div>
 
           <div class="box2">
-            <img src="/assets/feedback.png" alt="" />
+            <img src="/assets/feedback.png" alt="" width="75" />
             <h3>Feedback Control Systems</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
@@ -65,7 +65,7 @@
           </div>
 
           <div class="box2">
-            <img src="/assets/admath.png" alt="" />
+            <img src="/assets/admath.png" alt="" width="75" />
             <h3>Advanced Math for ECE</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
@@ -75,7 +75,7 @@
           </div>
 
           <div class="box2">
-            <img src="/assets/prog.png" alt="" />
+            <img src="/assets/prog.png" alt="" width="75" />
             <h3>Computer Programming</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
@@ -85,7 +85,7 @@
           </div>
 
           <div class="box2">
-            <img src="/assets/cpu.png" alt="" />
+            <img src="/assets/cpu.png" alt="" width="75" />
             <h3>Electronics 1-3</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
@@ -95,7 +95,7 @@
           </div>
 
           <div class="box2">
-            <img src="/assets/diff.png" alt="" />
+            <img src="/assets/diff.png" alt="" width="75" />
             <h3>Differential Equations</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
@@ -105,7 +105,7 @@
           </div>
 
           <div class="box2">
-            <img src="/assets/comms.png" alt="" />
+            <img src="/assets/comms.png" alt="" width="75" />
             <h3>Communications</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
@@ -115,7 +115,7 @@
           </div>
 
           <div class="box2">
-            <img src="/assets/emags.png" alt="" />
+            <img src="/assets/emags.png" alt="" width="75" />
             <h3>Electromagnetics</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
@@ -125,7 +125,7 @@
           </div>
 
           <div class="box2">
-            <img src="/assets/circ.png" alt="" />
+            <img src="/assets/circ.png" alt="" width="75" />
             <h3>Circuits</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
@@ -134,7 +134,7 @@
             <a href="#" class="btn">Read More</a>
           </div>
           <div class="box2">
-            <img src="/assets/signals.png" alt="" />
+            <img src="/assets/signals.png" alt="" width="75" />
             <h3>Signals</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
@@ -153,7 +153,7 @@
     <div class="slider">
       <div class="card-container">
         <span class="pro">Student</span>
-        <img class="round" src="/assets/avatar.png" alt="user" width="40%" />
+        <img class="round" src="/assets/avatar.png" alt="user" width="75" />
         <h3 class="name">Neil Carlos C. Santos</h3>
         <h6>BSECE4D</h6>
         <p>
@@ -178,7 +178,7 @@
 
       <div class="card-container">
         <span class="pro">ENGR</span>
-        <img class="round" src="/assets/avatar.png" alt="user" width="40%" />
+        <img class="round" src="/assets/avatar.png" alt="user" width="75" />
         <h3 class="name">Timothy M. Amado</h3>
         <h6>Faculty Head</h6>
         <p>
@@ -203,7 +203,7 @@
 
       <div class="card-container">
         <span class="pro">ENGR</span>
-        <img class="round" src="/assets/avatar.png" alt="user" width="40%" />
+        <img class="round" src="/assets/avatar.png" alt="user" width="75" />
         <h3 class="name">Nilo Arago</h3>
         <h6>COE College Dean</h6>
         <p>
@@ -228,7 +228,7 @@
 
       <div class="card-container">
         <span class="pro">ENGR</span>
-        <img class="round" src="/assets/avatar.png" alt="user" width="40%" />
+        <img class="round" src="/assets/avatar.png" alt="user" width="75" />
         <h3 class="name">Edmund Monilar</h3>
         <h6>Professor</h6>
         <p>
